<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/safaricom"
        style="@style/CategoryStyle"
        android:background="@color/categorySafaricom"
        android:text="@string/category_safcom" />

    <TextView
        android:id="@+id/airtel"
        style="@style/CategoryStyle"
        android:background="@color/categoryAirtel"
        android:text="@string/category_airtel" />

    <TextView
        android:id="@+id/orange"
        style="@style/CategoryStyle"
        android:background="@color/categoryOrange"
        android:text="@string/category_orange" />

    <TextView
        android:id="@+id/dstv"
        style="@style/CategoryStyle"
        android:background="@color/categoryDSTV"
        android:text="@string/category_dstv" />

    <TextView
        android:id="@+id/yu"
        style="@style/CategoryStyle"
        android:background="@color/categoryYu"
        android:text="@string/category_yu" />

    <TextView
        android:id="@+id/gotv"
        style="@style/CategoryStyle"
        android:background="@color/categoryGOTV"
        android:text="@string/category_gotv" />

</LinearLayout>

